# TraeMultiAgentSkill

./: .$wechat_article_code_map.drawio.bkp  .devsquad.yaml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  EXAMPLES_EN.md  FUTURE_PLAN.md  FUTURE_PLAN_EN.md  GITHUB_SUBMISSION_SUMMARY.md  GUIDE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  README-CN.md  README-JP.md  README.md  README_EN.md  README_IMPROVEMENT.md  SKILL-CN.md  SKILL-JP.md  SKILL.md  USAGE.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  skill-manifest-example.yaml  skill-manifest.yaml  skills-index.json  test_v35_integration.py  trae-agent  wechat_article_code_map.md
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  REBASE_HEAD  config  index
.git_disabled/logs/: HEAD
.github/workflows/: test.yml
config/: llm_optimization.yaml
context/global/: global_context.json
data/progress/: task_progress.json
docs/: OPTIMIZATION_PROGRESS.md  RELEASE_SUMMARY.md  REVIEW_CONSENSUS_2026-04-27.md  code-map-visualizer.html  critical_review.md  long_agent_architecture.drawio  wechat_article.md  wechat_article_v2.2.md
docs/analysis/: carrymem_integration_insights.md
docs/architecture/: agent_briefing_spec.md  integration_plan.md  memory_integration_architecture.md  protocol_interfaces_spec.md  v3-phase2-permission-design.md  v3-phase2-skillify-design.md  v3-phase3-warmup-design.md  v3-phase4-memorybridge-design.md  v3-review-report.md  v3-upgrade-proposal.md
docs/dev/: AI_INTEGRATION_SUMMARY.md  CONTEXT_MANAGEMENT_UPDATE.md  DUAL_LAYER_CONTEXT_DESIGN.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  QUICK_START_IMPROVEMENT.md  SIMPLESKILL_IMPROVEMENT_PLAN.md
docs/guide/: CONFIGURATION.md  QUICK_REFERENCE.md  USAGE.md
docs/guides/: CODE_MAP_USAGE.md  USAGE_GUIDE.md  agent_briefing_confidence_integration.md  user_onboarding_verification.md
docs/i18n/: EXAMPLES_EN.md  GUIDE_EN.md  GUIDE_JP.md  README_CN.md  README_JP.md  SKILL_CN.md  SKILL_JP.md
docs/milestones/: milestone_2_summary.md
docs/planning/: v3.2-final-consensus.md  v3.2-optimization-proposal.md  v3.2-unified-roadmap.md
docs/prd/: carrymem_integration_consensus.md  carrymem_integration_response.md  carrymem_integration_review_carrymem_team.md  lifecycle_phases_definition.md  lifecycle_phases_review.md  protocol_interface_system_prd.md
docs/product-manager/: USER_STORIES.md
docs/research/: milestone_0_technical_research.md
docs/reviews/: prd_review_protocol_interface_system.md
docs/spec/: CODE_MAP_PROMPT.md  CODE_MAP_SPEC.md  MULTI_ROLE_PROMPTS_INDEX.md  PROJECT_STRUCTURE.md  WORKBUDDY_CLAW_INTEGRATION_SPEC.md
docs/test-expert/: TEST_PLAN.md
docs/testing/: memory_integration_test.md  regression_test_strategy.md
docs/vibe-coding/: CORE_PRINCIPLES_EN_V2.md
memory-bank/: architecture.md  implementation-plan.md  progress.md
memory-bank/plans/: plan_1774886111.json  plan_1774928787.json  plan_1774928963.json  plan_1774928988.json  plan_1774929028.json
progress/: task_progress.json
registry/: skills.json
scripts/: agent_loop_controller_v2.py  ai_assistant.py  ai_initializer.py  ai_semantic_matcher.py  benchmark_v3.4.py  checkpoint_manager.py  cli.py  code_map_generator.py  code_map_generator_v2.py  core_rules.py  deliverable_quality_control.py  dual_layer_context_manager.py  integration_script.py  knowledge_base_manager.py  mcp_server.py  memory_adapter.py  multi_role_code_walkthrough.py  multi_role_collaborative_analyzer.py  project_understanding.py  role_matcher.py  scripts  skill_registry.py  spec_tools.py  standardized_workflow.py  sync_l2_cache.sh  sync_trae_skill.sh  task_completion_checker.py  task_list_manager.py  test_ai_components.py  test_memory_adapter.py  test_v2_components.py  trae_agent.py  trae_agent_dispatch.py  trae_agent_dispatch.sh  trae_agent_dispatch_v2.py  trae_agent_dispatch_wrapper.sh  user_experience_manager.py  user_intent_recognition.py  workflow_engine.py  workflow_engine_v2.py
tests/: test_agent_briefing.py  test_confidence_score.py  test_config_injection.py  test_llm_cache_protocol.py  test_null_providers.py  test_performance_monitor_protocol.py  test_protocols.py  test_rule_injection_security.py
workflows/: definitions.json
(+158 files in other folders)
