[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsquad"
version = "3.6.1"
description = "Multi-Role AI Task Orchestrator — one task in, multi-role AI collaboration, one conclusion out (Production Ready)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DevSquad Team"},
]
keywords = ["ai", "multi-agent", "orchestration", "llm", "collaboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
carrymem = ["carrymem[devsquad]>=0.2.8"]
mcp = ["mcp>=0.9"]
monitoring = ["psutil>=5.9"]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
]
visualization = [
    "streamlit>=1.28.0",
    "jupyter>=1.0",
]
alerts = [
    "slack-sdk>=3.21.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "carrymem[devsquad]>=0.2.8",
    "mcp>=0.9",
    "psutil>=5.9",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
    "streamlit>=1.28.0",
    "jupyter>=1.0",
    "slack-sdk>=3.21.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
devsquad = "scripts.cli:main"

[project.urls]
Homepage = "https://github.com/lulin70/DevSquad"
Documentation = "https://github.com/lulin70/DevSquad#readme"
Repository = "https://github.com/lulin70/DevSquad"
Issues = "https://github.com/lulin70/DevSquad/issues"

[tool.setuptools.packages.find]
include = ["scripts*", "skills*"]

[tool.setuptools.package-data]
"skills" = ["*.yaml", "*.yml", "*.md"]
"scripts" = ["*.yaml", "*.yml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["*test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
